# pegaflow

./: .gitignore  .gitlab-ci.yml  HISTORY.md  MANIFEST.in  README.md  setup.cfg  setup.py
Pegasus/: DAX3.py
pegaflow/: Workflow.py  __init__.py
pegaflow/api/: workflow.py
pegaflow/db/: ensembles.py
pegaflow/example/: ExampleWorkflow.py  README.md  WCFiles_Function.py  WordCountFiles.py  generate_site.py  pegasusrc  submit.sh  wf_direct_run.py  wf_yml.py
pegaflow/netlogger/: util.py
pegaflow/service/monitoring/: queries.py
pegaflow/test/: run_til_workflow_end.py  run_til_workflow_end.sh
pegapy3/: DAX2.py  DAX3.py  PDAX2.py  Workflow.py
pegapy3/example/: ExampleWorkflow.py  README.md
pegapy3/examples/: README.md
pegasus_wms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
