[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[isort]
balanced_wrapping = true
forced_separate = nrgr
multi_line_output = 5

[yapf]
based_on_style = pep8
dedent_closing_brackets = true
indent_dictionary_value = true
